fix scrollables overflow

--- a/src/css/forest/main.css
+++ b/src/css/forest/main.css
@@ -196,6 +196,7 @@ h2 {
     margin-bottom: 1rem;
     color: var(--secondaryColor);
     font-family: Light;
+    overflow: hidden;
 }
 
 .section p {
